Fix for broken css 3d engines

--- a/assets/stylesheets/soysauce.scss
+++ b/assets/stylesheets/soysauce.scss
@@ -3,7 +3,9 @@
 // Global Styles
 [data-ss-widget], [data-ss-component] {
 	-webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
-	-webkit-backface-visibility: hidden;
+	@media (-webkit-transform-3d) {
+  	-webkit-backface-visibility: hidden;
+	}
 	position: relative;
 	z-index: 5;
 	&[data-ss-degrade] {
